syntax = "proto3";
package clazz;





/*
ListClazz请求
*/
message ListClazzRequest {
    /*
    页码
    */
    int32 page = 1 ;
    /*
    页大小
    */
    int32 pageSize = 2 ;
    /*
    是否启禁用
    */
    int32 disabled = 3 ;
    /*
    是否全部
    */
    int32 isAll = 4 ;
}

/*
ListClazz返回
*/
message ListClazzResponse {
message List {
    /*
    ORG
    */
    int32 org = 1 ;
    /*
    Id
    */
    string Id = 2 ;
    /*
    名称
    */
    string Name = 3 ;
    /*
    数据ID
    */
    string dataId = 4 ;
    /*
    启禁用
    */
    bool disabled = 5 ;
    /*
    执行方法
    */
    string fun = 6 ;
    /*
    是否要求脚本
    */
    bool requiredScript = 7 ;
    /*
    数据要求字段
    */
    repeated string requiredFields = 8 ;
    /*
    创建者
    */
    string creator = 9 ;
    /*
    修改者
    */
    string modifer = 10 ;
    /*
    创建时间
    */
    int32 ctime = 11 ;
    /*
    修改时间
    */
    int32 mtime = 12 ;
}
        
    
    /*
    页数
    */
    int32 page = 1 ;
    /*
    页大小
    */
    int32 page_size = 2 ;
    /*
    总数
    */
    int32 total = 3 ;
    /*
    数据列表
    */
    repeated List list = 4 ;
}

/*
ListClazzApi返回
*/
message ListClazzResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    clazz.ListClazzResponse data = 4 ;
}

